--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "my-sudoku",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ntuee-webprogramming.github.io/109-1-Web-Hackathon02-Example",
+  "homepage":  "https://tobychen0106.github.io/109-1-Web-Hackathon02-Example/",
   "dependencies": {
     "-": "^0.0.1",
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "cypress": "^5.5.0",
     "fireworks": "^2.2.6",
     "fs": "^0.0.1-security",
     "gh-pages": "^3.1.0",
@@ -26,10 +25,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start_server": "node server.js",
-    "build": "react-scripts build",
-    "test": "npx cypress run --spec cypress/integration/sample01test.spec.js",
-    "eject": "react-scripts eject",
-    "cypress": "cypress open"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
