--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "my-sudoku",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tobychen0106.github.io/109-1-Web-Hackathon02-Example/",
   "dependencies": {
     "-": "^0.0.1",
     "@material-ui/core": "^4.11.0",
@@ -20,10 +19,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start_server": "node server.js",
+    "start": "node server.js",
     "build": "react-scripts build"
   },
   "eslintConfig": {
